--- a/app/views/settings/accounting.html.erb
+++ b/app/views/settings/accounting.html.erb
@@ -6,44 +6,104 @@
     padding: 10px;
     margin-left:20px;
     font-weight: bold;
-}
+  }
+  #items{
+    width: 100%;
+    margin: 10px;
+    padding: 5px;
+  }
+  .button{
+    width: 156px;
+  }
 </style>
 <%= render :partial => "layouts/tabs_for_settings" %>
 <% if !current_login.access_token.present? && !current_login.access_secret.present? && !current_login.realm_id.present? %>
-<!-- somewhere in your document include the Javascript -->
-<script type="text/javascript" src="https://appcenter.intuit.com/Content/IA/intuit.ipp.anywhere.js"></script>
+  <!-- somewhere in your document include the Javascript -->
+  <script type="text/javascript" src="https://appcenter.intuit.com/Content/IA/intuit.ipp.anywhere.js"></script>
 
-<!-- configure the Intuit object: 'grantUrl' is a URL in your application which kicks off the flow, see below -->
-<script>
-  intuit.ipp.anywhere.setup({menuProxy: '/path/to/blue-dot', grantUrl: "<%= authenticate_settings_url %>"});
-</script>
+  <!-- configure the Intuit object: 'grantUrl' is a URL in your application which kicks off the flow, see below -->
+  <script>
+    intuit.ipp.anywhere.setup({menuProxy: '/path/to/blue-dot', grantUrl: "<%= authenticate_settings_url %>"});
+  </script>
 
-<!-- this will display a button that the user clicks to start the flow -->
-<ipp:connectToIntuit></ipp:connectToIntuit>
+  <!-- this will display a button that the user clicks to start the flow -->
+  <ipp:connectToIntuit></ipp:connectToIntuit>
 <% else %>
-<%= button_to "Disconnect from Quickbooks", {:controller => "settings", :action => "dis_quickbooks"} , :class => "btn btn-small btn-primary"%>
+  <div id="items">
+    <%= button_to "Disconnect from Quickbooks", {:controller => "settings", :action => "dis_quickbooks"} , :class => "btn btn-small btn-primary"%>
+  </div>
 
-<%= link_to_function "Sync Customer Now", "sync_customer_data();", :class => "btn btn-small btn-primary", :style => "width:156px", :id => "sync_customer" %>
-<span id="notice-customer" class="notice">Import all new customers created on quickbooks.</span>
-<br />
+  <div id="items">
+    <%= link_to_function "Sync Customer Now", "sync_customer_data();", :class => "btn btn-small btn-primary button", :id => "sync_customer" %>
+    <span id="notice-customer" class="notice">Import all new customers created on quickbooks.</span>
+  </div>
 
-<%#= link_to_function "Sync Items Now", "sync_items", :id => "sync_items" %>
-<%#*<span id="notice-item" class="notice">Import all new customers created on quickbooks.</span>%>
+  <div id="items">
+    <%= link_to_function "Sync Items Now", "sync_items();", :id => "sync_items", :class => "btn btn-small btn-primary button" %>
+    <span id="notice-item" class="notice">Import all Items created on quickbooks.</span>
+  </div>
+
+  <div id="items">
+    <%= link_to_function "Sync Employees Now", "sync_employees();", :id => "sync_employee", :class => "btn btn-small btn-primary button" %>
+    <span id="notice-employee" class="notice">Import all employees created on quickbooks.</span>
+  </div>
+
+  <div id="items">
+    <%= link_to_function "Sync Vendors Now", "sync_vendors();", :id => "sync_vendor", :class => "btn btn-small btn-primary button" %>
+    <span id="notice-vendor" class="notice">Import all vendors created on quickbooks.</span>
+  </div>
+
+  <div id="items" style="display:none;">
+    <%= link_to_function "Sync Sales Person Now", "sync_salse_person();", :id => "sync_sales_person", :class => "btn btn-small btn-primary button" %>
+    <span id="notice-user" class="notice">Import all sales representative created on quickbooks.</span>
+  </div>
 <% end %>
 
 <script>
   function sync_customer_data(){
     document.getElementById("sync_customer").innerHTML = "Synchronizing...."
     $.ajax({
-        url: '/settings/sync_customer_data',
-        type: 'GET',
-        dataType: 'script',
-        success: function(data){}
+      url: '/settings/sync_customer_data',
+      type: 'GET',
+      dataType: 'script',
+      success: function(data){}
     });
   }
 
   function sync_items(){
-  document.getElementById("sync-item").innerHTML = "Synchronizing...."
-  $.ajax({})
+    document.getElementById("sync_items").innerHTML = "Synchronizing....";
+    $.ajax({
+      url: '/settings/sync_items',
+      type: 'GET',
+      dataType: 'script',
+      success: function(data){}
+    })
+  }
+
+  //sync all users
+  function sync_employees(){
+    document.getElementById("sync_employee").innerHTML = "Synchronizing....";
+    $.ajax({
+      url: '/settings/sync_employees',
+      type: 'GET',
+      dataType: 'script',
+      success: function(data){}
+    })
+  }
+
+  //sync all sub-contractors
+  function sync_vendors(){
+    document.getElementById("sync_vendor").innerHTML = "Synchronizing....";
+    $.ajax({
+      url: '/settings/sync_vendors',
+      type: 'GET',
+      dataType: 'script',
+      success: function(data){}
+    })
+  }
+
+  //sync all vendors
+  function sync_salse_person(){
+    
   }
 </script>
