--- a/app/views/settings/sync_customer_data.js.erb
+++ b/app/views/settings/sync_customer_data.js.erb
@@ -1,4 +1,9 @@
 $("#notice-customer").html("All the customers are successfully sync to H5SW Application. Please Confirm it!");
+setTimeout(function(){
+  $("#notice-customer").hide();
+  $("#notice-customer").fadeIn();
+  $("#notice-customer").html("Import all new customers created on quickbook.");
+}, 8000);
 $("#sync_customer").html("Sync Customer Now")
-$("#notice-customer").fadeOut();
+$("#notice-customer").hide();
 $("#notice-customer").fadeIn();
