changes in quickbook

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,4 +1,4 @@
- <table class="table">
+<table class="table">
   <table class="table table-striped" >
     <tr>
       <th colspan="9">
@@ -8,7 +8,7 @@
     <tr>
       <th>Name</th>
       <th>Type</th>
-      <th>Contact</th>
+      <th>Contact Name</th>
       <th>Email</th>
       <th>Jobs</th>
       <th>Options</th> 
@@ -17,12 +17,12 @@
       <tr>
         <td><%= link_to  customer.company_name, edit_customer_path(customer) %></td>
         <td><%= customer.types %></td>
-        <td>
-          <% customer.contact_id ? contact = Contact.find(customer.contact_id) : '' %>
-          <%= contact ? contact.name : '-' %>
-        </td>
-        <td><%= contact ? contact.email : '-' %> </td>
-        <td style="text-align: center;"><%= customer.id ? Job.where("customer_id=?", customer.id).count : '0' %> </td>
+
+        <% Contact.exists?(:customer_id => customer.id) ? contact = Contact.find_by_customer_id(customer.id) : "" %>
+          <td><%= contact.present? ? contact.name : '-' %></td>
+          <td><%= contact.present? ? contact.email : '-' %> </td>
+
+          <td style="text-align: center;"><%= customer.id ? Job.where("customer_id=?", customer.id).count : '0' %> </td>
         <td>
           <%= link_to image_tag("add_contact.png", :title => "Add Contact", :width => "24px", :height => "24px"), new_contact_path(:cust_id => customer) %>
           |<%= link_to image_tag("add_jobsite.png", :title => "Add Job Site", :width => "24px", :height => "24px"), new_jobsite_path(:cust_id => customer) %>
