--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -31,7 +31,7 @@ div {
 .field_with_errors {
   padding: 2px;
   color: red;
-  display: table;
+  display: inline;
 }
 .field_with_errors input{
     border: 1px solid red;
