--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -2,7 +2,7 @@
 
   <table width="100%">
     <tr style="color: #FFF; font-weight: bold; background: #666;">
-      <td>Document Format supported are : .doc, .docx, .zip, .pdf</td>
+      <td>Document Format supported are : .docx, .doc, .pdf, .zip, .jpg, .jpeg, .gif, .png, .tif, .tiff, .txt, .ppt, .pptx, .xls, .xlsx</td>
     </tr>
     <tr>
       <td>
