--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,12 +1,13 @@
 <table id="sub_total" class ="table table-striped ">
   <tr>
-    <th colspan="7" style="background:#666; color: #FFF; font-weight: bold;">
-       Please Click On Quantity and Description to edit
+    <th colspan="8" style="background:#666; color: #FFF; font-weight: bold;">
+       Please Click On Quantity, Type, Number and Description to edit
     </th>
   </tr>
   <tr>
     <th>Type</th>
     <th>Qty</th>
+    <th>Unit_Price</th>
     <th>Number</th>
     <th>Name</th>
     <th>Description</th>
@@ -16,11 +17,16 @@
 
   <% inventories.each do |inventory| %>
     <tr>
-      <td><%= inventory.itemtype %></td>
+      <td id="itemtype_<%= inventory.id %>"><div onclick="inplace_edit_itemtype('<%= inventory.id %>')"><span style ="color :blue; background-color:#EEEEEE; padding: 1px 5px; "><%= inventory.itemtype %></span>
+       <div id="itemtype_<%= inventory.id %>" style="display:none;"></div>
+      </td>
       <td id="quantity_<%= inventory.id %>"><div onclick="inplace_edit_quantity('<%= inventory.id %>')"><span style ="color :blue; background-color:#EEEEEE; padding: 1px 5px; "><%= inventory.qty%></span></div>
         <div id="qty_<%= inventory.id %>" style="display:none;"></div>
       </td>
-      <td><%= inventory.number %></td>
+      <td><%= inventory.unit_price %></td>
+      <td id="number_<%= inventory.id %>"><div onclick="inplace_edit_number('<%= inventory.id %>')"><span style ="color :blue; background-color:#EEEEEE; padding: 1px 5px; "><%= inventory.number %></span>
+       <div id="number_<%= inventory.id %>" style="display:none;"></div>
+      </td>
       <td><%= inventory.name %></td>
       <td id="description_<%= inventory.id %>"><div onclick="inplace_edit_description('<%= inventory.id %>')"><span style ="color :blue;  background-color:#EEEEEE; padding: 1px 5px;"><%= inventory.description%></span></div>
         <div id="description_<%= inventory.id %>" style="display:none;"></div>
@@ -39,5 +45,5 @@
       sum += isNaN(tds[i].innerHTML.slice(1)) ? 0 : parseFloat(tds[i].innerHTML.slice(1));
     }
   }
-  document.getElementById('sub_total').innerHTML += '<tr style="font-weight:bold;"><td colspan="5"></td><td>$' + sum.toFixed(2) + '</td><td>Total</td></tr>';
+  document.getElementById('sub_total').innerHTML += '<tr style="font-weight:bold;"><td colspan="6"></td><td>$' + sum.toFixed(2) + '</td><td>Total</td></tr>';
 </script>
