--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -3,10 +3,10 @@
   <%= render '/layouts/timer' %>
 <% end %>
 
-<% if params[:type]== 'Customer' %>
+<% if params[:controller]=="notes" && params[:action]=="index" && params[:type]== 'Customer' %>
   <%= gmaps4rails(@json) %><br/><br/>
-<% else %>
 <% end %>
+  
 <br/><br/>
 <%= render params[:type] == "Job" ?'/layouts/job_with_action' : "/layouts/customer_with_action" %>
 
