--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -2,5 +2,25 @@
 <%= stylesheet_link_tag "gmaps4rails_1" %>
 
 <table div ="gmap">
-   <%= gmaps4rails(@json) %>
+  <% if Jobsite.where(:customer_id => current_login.customers.collect(&:id)).present?  %>
+    <%= gmaps4rails(@json) %>
+  <% else %>
+    <span class="alert-error" style="padding:0 5px; width:100%;">
+      You have no jobsites created yet. Please create jobsites to view their locations
+    </span>
+    <%= gmaps(:map_options => {:detect_location => true, :center_on_user => true, :auto_zoom => false, :zoom => 12, :auto_adjust => true}, :markers => {:data => @json} ) %>
+  <% end %>
 </table>
+
+<script type="text/javascript" charset="utf-8">
+  // display map of current location if no jobsites are present
+  $(document).ready(function(){
+    Gmaps.map.callback = function() {
+      Gmaps.map.createMarker({Lat: Gmaps.map.userLocation.lat(),
+        Lng: Gmaps.map.userLocation.lng(),
+        rich_marker: null,
+        marker_picture: ""
+      })
+    }
+  });
+</script>
