--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:ipp="">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="content-type" content="text-html; charset=utf-8" />
     <title>SMO</title>
     <%= stylesheet_link_tag    "application","datepicker", :media => "all" %>
     <%= stylesheet_link_tag 'gmaps4rails', "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
