--- a/app/views/customs/_table_fields.html.erb
+++ b/app/views/customs/_table_fields.html.erb
@@ -11,8 +11,53 @@
 <td><%= text_field_tag :fields_11, nil, :class => "small_row", :value => @values ? @values[10] : '', :placeholder => "value" %></td>
 <td colspan="2" style="width:50px">
   <% if @values %>
-    <%= link_to_function "Update", "update_rows(#{@dropdown_value.id});", :class => "btn btn-mini btn-primary", :style => "color:white" %>
+    <%= link_to_function "Update".html_safe, "update_rows(#{@dropdown_value.id});", :class => "btn btn-mini btn-primary", :style => "color:white", :id => "update-btn" %>
   <% else %>
-    <%= link_to_function "Add", "display_row(#{custom.id});", :class => "btn btn-mini btn-primary", :style => "color:white" %>
+    <%= link_to_function "Add", "display_row(#{custom.id});", :id => "add-btn", :class => "btn btn-mini btn-primary", :style => "color:white" %>
   <% end %>
 </td>
+
+
+<script>
+  function display_row(custom_id) {
+    var datas = new Array();
+    for (var i = 0; i < 11; i++) {
+      val = document.getElementById("fields_" + (i + 1)).value;
+      datas[i] = val == "" ? "-" : val;
+    }
+    fields = datas.join(",");
+
+    $.ajax({
+      url: '/customs/create_table_fields',
+      data: {
+        custom_id: custom_id,
+        drop_value: fields
+      },
+      type: 'POST',
+      dataType: 'script',
+      success: function(data) {
+      }
+    });
+  }
+
+
+  function update_rows(id) {
+    var datas = new Array();
+    for(var i=0; i<11; i++){
+      value = document.getElementById("fields_"+(i+1)).value;
+      value = (value==" " || value=="") ? "-" : value;
+      datas[i] = value
+    }
+    fields = datas.join(",");
+    $.ajax({
+      url: '/customs/' + id + '/update_table',
+      data: {
+        drop_value: fields
+      },
+      type: 'PUT',
+      dataType: 'script',
+      success: function(data) {
+      }
+    });
+  }
+</script>
