--- a/app/views/customs/_form.html.erb
+++ b/app/views/customs/_form.html.erb
@@ -41,10 +41,10 @@
     </tr>
 
 
-    <%= f.hidden_field :customer_id, :value => session[:customer_id] %>
-    <%= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
+    <%#= f.hidden_field :customer_id, :value => session[:customer_id] %>
+    <%#= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
     <% if @tab.tab_type == "Job" %>
-      <%= f.hidden_field :job_id, :value => session[:job_id] %>
+      <%#= f.hidden_field :job_id, :value => session[:job_id] %>
     <% end %>
 
 
