--- a/app/assets/stylesheets/gmaps4rails_1.css
+++ b/app/assets/stylesheets/gmaps4rails_1.css
@@ -6,15 +6,15 @@
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 100%;
-  height: 360px;
-  float: right;
+  width: 360px;
+  height: 200px;
+  float: left;
   margin:auto
 }
 
 .gmaps4rails_map {
-  width: 800px;
-  height: 400px;
+  width: 360px;
+  height: 200px;
 }
 
 .bing_map {
@@ -27,7 +27,7 @@
 }
 
 #map{
-    width: 100%;
-    height: 360px;
-    float: right;
+    width: 360px;
+    height: 200px;
+    float: left;
 }
